@@ -1,3 +1,14 @@
+2009-09-23  Miguel de Icaza  <miguel@novell.com>
+
+	* verify.c: when comparing culture strings, use g_ascii_strcmp
+
+	* assembly.c (mono_public_tokens_are_equal): Change g_strcasecmp
+	when comparing public key tokens to use memcmp on 16 bytes.   I do
+	not believe this ever worked as advertised in the past.
+
+	The standard Public Key is 00 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00
+	which would have always failed earlier.
+	
 2009-06-25  Miguel de Icaza  <miguel@novell.com>
 
 	* gc.c: Raise a NullArgumentException if the object passed is
